# current_email

./: .gitignore  README.md  current_email.opam  dune-project
.github/workflows/: main.yml
example/: dune  main.ml
src/: current_email.ml  current_email.mli  dune
